--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
+    "sqlite3": "^5.1.7",
     "winston": "^3.18.3"
   }
 }
