--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.10",
     "escape-html": "^1.0.3",
     "express": "^5.1.0",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
